add components + sidebar + responsive

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <app-secondary-nav tableTitle="All Cases" addNewButton="New Case" />
   <app-table
     firstColumnHeader="Case"
@@ -9,7 +9,7 @@
     <td casetd ngProjectAs="firstContent"></td>
     <td casetd ngProjectAs="secondContent"></td>
     <td casetd ngProjectAs="thirdContent"></td>
-    <td>
+    <td ngProjectAs="fourthContent">
       <button>SELECT <i class="fa-solid fa-arrow-down"></i></button>
     </td>
   </app-table>
