--- a/frontend/src/app/shared/table/table.component.css
+++ b/frontend/src/app/shared/table/table.component.css
@@ -16,3 +16,40 @@ td {
 th {
   color: var(--mainTextColor);
 }
+
+@media (max-width: 768px) {
+  table thead {
+    display: none;
+  }
+  table tbody tr {
+    display: flex;
+    flex-direction: column;
+  }
+  table tbody tr td,
+  table tbody tr th {
+    display: block;
+    width: 100%;
+  }
+  table tbody tr td:last-child {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+  }
+}
+
+.content {
+  transition: margin-left 0.3s ease-in-out;
+  width: 100%;
+}
+
+@media (min-width: 768px) {
+  /* On larger screens, adjust the content to account for the sidebar width */
+  .content {
+    margin-left: 280px;
+  }
+}
+
+/* Sidebar toggle button */
+.toggle-sidebar {
+  z-index: 1001;
+}
