--- a/frontend/src/app/shared/table/table.component.html
+++ b/frontend/src/app/shared/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <table class="table">
     <thead>
       <tr>
@@ -7,17 +7,17 @@
         <th scope="col">{{ secondColumnHeader }}</th>
         <th scope="col">{{ thirdColumnHeader }}</th>
         <th scope="col">{{ fourthColumnHeader }}</th>
-        <ng-content #fifthColumnHeader></ng-content>
+        <ng-content select="fifthColumnHeader"></ng-content>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">1</th>
-        <ng-content #firstContent></ng-content>
-        <ng-content #secondContent></ng-content>
-        <ng-content #thirdContent></ng-content>
-        <ng-content #fourthContent></ng-content>
-        <ng-content #fifthContent></ng-content>
+        <ng-content select="firstContent"></ng-content>
+        <ng-content select="secondContent"></ng-content>
+        <ng-content select="thirdContent"></ng-content>
+        <ng-content select="fourthContent"></ng-content>
+        <ng-content select="fifthContent"></ng-content>
       </tr>
     </tbody>
   </table>
