--- a/frontend/src/app/components/sidebar/sidebar.component.css
+++ b/frontend/src/app/components/sidebar/sidebar.component.css
@@ -1,12 +1,10 @@
-.grid {
-  display: grid;
-  grid-template-columns: 20rem 1fr; 
-}
-.grid {
-  display: flex;
-  width: 100%;
-  height: 100vh;
+.d-flex {
   position: relative;
+  width: 100%;
+}
+
+.activated-link {
+  color: red;
 }
 
 .sidebar {
@@ -36,26 +34,19 @@
     transform: translateX(0);
   }
 
-  .grid.sidebar-open .main-content {
-    width: 100%;
+  .d-flex.sidebar-open .content {
+    margin-left: 0;
   }
 }
 
-.main-content {
-  flex-grow: 1;
+.content {
   transition: margin-left 0.3s ease-in-out;
   width: 100%;
 }
 
-@media (max-width: 768px) {
-  .main-content {
-    margin: 20px;
-  }
-}
-
 @media (min-width: 768px) {
-  .main-content {
-    margin: 50px 20px;
+  .content {
+    margin-left: 280px;
   }
 }
 
