--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="main-wrapper">
   <app-sidebar></app-sidebar>
   <div class="main-content">
     <router-outlet></router-outlet>
