--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -1,5 +1,9 @@
 <div class="">
-  <app-secondary-nav tableTitle="All Cases" addNewButton="New Case" />
+  <app-secondary-nav
+    tableTitle="All Cases"
+    addNewButton="New Case"
+    addingRoute="add-case"
+  />
   <app-table
     firstColumnHeader="Case"
     secondColumnHeader="Client"
