--- a/frontend/src/app/components/clients/clients.component.html
+++ b/frontend/src/app/components/clients/clients.component.html
@@ -1,5 +1,9 @@
 <div class="container">
-  <app-secondary-nav tableTitle="Client List" addNewButton="New Client" />
+  <app-secondary-nav
+    tableTitle="Client List"
+    addNewButton="New Client"
+    addingRoute="add-case"
+  />
   <app-table
     firstColumnHeader="Client"
     secondColumnHeader="Contact"
