--- a/frontend/src/app/shared/secondary-nav/secondary-nav.component.html
+++ b/frontend/src/app/shared/secondary-nav/secondary-nav.component.html
@@ -2,7 +2,7 @@
   <div class="left-nav d-flex align-items-center">
     <h3 class="table-title me-3">{{ tableTitle }}</h3>
     <div class="add-new">
-      <button>+ {{ addNewButton }}</button>
+      <button routerLink="add-case">+ {{ addNewButton }}</button>
     </div>
   </div>
   <div class="search d-flex align-items-center">
