--- a/frontend/src/app/shared/sidebar/sidebar.component.css
+++ b/frontend/src/app/shared/sidebar/sidebar.component.css
@@ -3,8 +3,28 @@
   width: 100%;
 }
 
-.activated-link {
-  color: red;
+.mainSide {
+  border-right: 1px solid var(--mainTextColor);
+}
+
+.activated {
+  color: white !important;
+  background-color: #415094 !important;
+  border-left: 4px solid #9e34ec !important;
+}
+
+.nav-link {
+  color: #415094;
+  border-radius: 0;
+  border-left: 4px solid transparent;
+}
+
+.nav-link:hover {
+  color: white !important;
+  background-color: #415094;
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  border-left: 4px solid #9e34ec;
 }
 
 .sidebar {
@@ -28,6 +48,9 @@
     position: fixed;
     z-index: 1000;
     height: 100%;
+    background: rgba(255, 255, 255, 0.5) !important;
+        backdrop-filter: blur(3px) !important;
+    }
   }
 
   .sidebar.active {
