clients & cases lists + delete functionality + responsive table

--- a/frontend/src/app/components/cases/case/case.component.html
+++ b/frontend/src/app/components/cases/case/case.component.html
@@ -1,4 +1,11 @@
-<span>Case No: </span> <br />
-<span>Category: </span> <br />
-<span>Next Hearing Date: </span> <br />
-<span>Filing Date: </span> <br />
+<div>
+  <span>Case Name: {{ caseName }} </span> <br />
+  <span>Case Number: {{ caseId }} </span> <br />
+  <span
+    >Case Type:
+    {{ caseCategory }}
+  </span>
+  <br />
+  <span>Case Date: {{ caseDate }} </span> <br />
+  <span>Case Grade: {{ caseGrade }} </span> <br />
+</div>
