--- a/frontend/src/app/components/clients/client/client.component.html
+++ b/frontend/src/app/components/clients/client/client.component.html
@@ -1,4 +1,10 @@
-<span>Name: </span> <br />
-<span>Mobile : </span> <br />
-<span>Email: </span> <br />
-<span>Address: </span> <br />
+<div>
+  <span>Name: {{ clientName }} </span> <br />
+  <span>Mobile: {{ clientMobile }} </span> <br />
+  <span
+    >Email:
+    {{ clientEmail }}
+  </span>
+  <br />
+  <span>Address: {{ clientAddress }} </span> <br />
+</div>
