--- a/frontend/src/app/shared/table/table.component.html
+++ b/frontend/src/app/shared/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="table-responsive">
   <table class="table">
     <thead>
       <tr>
@@ -11,14 +11,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <ng-content select="firstContent"></ng-content>
-        <ng-content select="secondContent"></ng-content>
-        <ng-content select="thirdContent"></ng-content>
-        <ng-content select="fourthContent"></ng-content>
-        <ng-content select="fifthContent"></ng-content>
-      </tr>
+      <ng-content></ng-content>
     </tbody>
   </table>
 </div>
