--- a/frontend/src/app/components/cases/cases.component.css
+++ b/frontend/src/app/components/cases/cases.component.css
@@ -3,18 +3,35 @@ th {
   vertical-align: middle;
 }
 
-button {
+.custom-select {
+  position: relative;
+  display: inline-block;
+}
+
+.custom-select select {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   background-color: transparent;
   padding: 5px 20px;
   border-radius: 40px;
-  border: none;
+  outline: none;
   color: var(--textTablecolor);
   cursor: pointer;
   border: 1px solid #7f32fd;
   transition: 0.2s ease-in-out;
 }
 
-button:hover {
+.custom-select i {
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
+  pointer-events: none; /* Prevent the icon from being clickable */
+}
+
+select:hover,
+select:hover .custom-select i {
   background: rgb(247, 0, 190);
   background: linear-gradient(
     151deg,
@@ -26,7 +43,11 @@ button:hover {
     rgba(180, 28, 226, 1) 57%,
     rgba(128, 50, 253, 1) 100%
   );
-  color: white;
+  color: white !important;
+}
+
+select option {
+  color: black;
 }
 
 .me-5 {
