--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -41,6 +41,12 @@
           Court</a
         >
       </li>
+      <li>
+        <a class="nav-link" routerLink="calender" routerLinkActive="activated">
+          <i class="fa-solid fa-calendar-days"></i>
+          Events Calender</a
+        >
+      </li>
     </ul>
     @if (isSidebarOpen) {
     <button
