binding adding-form to client and cases

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -3,7 +3,14 @@
     tableTitle="All Cases"
     addNewButton="New Case"
     addingRoute="add-case"
+    (btnClicked)="toggleFormVisibility()"
   />
+  <app-adding-form
+    *ngIf="isFormVisable"
+    formHeader="Add New Case"
+    [formInputRows]="newCasesInputRows"
+    [onFormSubmit]="submitForm"
+  ></app-adding-form>
   <app-table
     firstColumnHeader="Case"
     secondColumnHeader="Client"
