--- a/frontend/src/app/shared/adding-form/adding-form.component.css
+++ b/frontend/src/app/shared/adding-form/adding-form.component.css
@@ -6,6 +6,11 @@
 
 .container {
   display: flex;
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(2px);
+  z-index: 1000;
   align-items: center;
   justify-content: center;
   height: 100vh;
@@ -16,6 +21,8 @@
   background-color: #2d3748;
   padding: 50px 0 50px 30px;
   border-radius: 8px;
+  max-height: 80%;
+  overflow-y: scroll;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
