adding Updating form for cases & Clients

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -5,12 +5,16 @@
     addingRoute="add-case"
     (btnClicked)="toggleFormVisibility()"
   />
+
   <app-adding-form
     *ngIf="isFormVisable"
-    formHeader="Add New Case"
+    [formType]="formType"
+    [formHeader]="formHeader"
     [formInputRows]="newCasesInputRows"
     [onFormSubmit]="submitForm"
+    (backdropClicked)="toggleFormVisibility()"
   ></app-adding-form>
+
   <app-table
     firstColumnHeader="Case"
     secondColumnHeader="Client"
@@ -47,6 +51,7 @@
           >
             <option value="">SELECT</option>
             <option value="View">View</option>
+            <option value="Update">Update</option>
             <option value="Delete">Delete</option>
           </select>
           <i
