--- a/frontend/src/app/shared/adding-form/adding-form.component.css
+++ b/frontend/src/app/shared/adding-form/adding-form.component.css
@@ -4,25 +4,25 @@
   box-sizing: border-box;
 }
 
-.container {
-  display: flex;
+.backdrop {
   position: absolute;
   top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(2px);
-  z-index: 1000;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
 }
 
 .form-box {
+  position: absolute;
+  margin: 0 auto;
   width: 60%;
   background-color: #2d3748;
   padding: 50px 0 50px 30px;
   border-radius: 8px;
-  max-height: 80%;
-  overflow-y: scroll;
+  z-index: 1010;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -37,6 +37,11 @@ form {
   display: flex;
   flex-direction: column;
   gap: 2.5vh;
+  max-height: 50vh;
+  overflow-y: scroll;
+}
+form::-webkit-scrollbar {
+  display: none;
 }
 
 p {
