--- a/frontend/src/app/components/clients/clients.component.html
+++ b/frontend/src/app/components/clients/clients.component.html
@@ -26,7 +26,7 @@
       <td style="color: var(--mainTextColor)" class="text-center">
         {{ $index + 1 }}
       </td>
-      <td>{{ client.name }} <br />Email</td>
+      <td>{{ client.name }}</td>
       <td>
         Mobile: {{ client.mobile }} <br />
         Email: {{ client.email }}
