dropdown for sidebar menu + delete old add form

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -23,7 +23,7 @@
   >
     @for (case of cases; track $index) {
     <tr>
-      <td class="">{{ $index + 1 }}</td>
+      <td class="text-center">{{ $index + 1 }}</td>
       <td
         casetd
         [caseName]="case.case_name"
