--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex mainSide" [class.sidebar-open]="isSidebarOpen">
   <div
-    class="sidebar d-flex flex-column flex-shrink-0 pe-3 text-white bg-transparent"
+    class="sidebar d-flex flex-column flex-shrink-0 text-white bg-transparent"
     [class.active]="isSidebarOpen"
   >
     <a
@@ -12,36 +12,68 @@
     </a>
     <hr style="color: var(--mainTextColor)" />
     <ul class="nav nav-pills flex-column mb-auto">
-      <li class="nav-item">
-        <a
-          routerLink="dashboard"
-          routerLinkActive="activated"
-          class="nav-link"
-          style="color: var(--mainTextColor)"
-        >
+      <li
+        class="nav-list"
+        routerLink="dashboard"
+        routerLinkActive="activated"
+        (click)="closeAllDropdowns()"
+      >
+        <a class="nav-link">
           <i class="fa-solid fa-table-cells"></i>
           Dashboard
         </a>
       </li>
-      <li>
-        <a routerLink="clients" routerLinkActive="activated" class="nav-link">
-          <i class="fa-solid fa-users"></i>
-          Clients</a
-        >
+      <li
+        (click)="clientsToggle()"
+        class="d-flex justify-content-between nav-list"
+        [ngClass]="{ activated: clientsDropDown }"
+        routerLink="#"
+      >
+        <div>
+          <a class="nav-link">
+            <i class="fa-solid fa-users"></i>
+            Clients</a
+          >
+        </div>
+        <div class="arrowDown p-2">
+          @if (clientsDropDown) {
+          <i class="fa-solid fa-chevron-down"></i>
+          } @else {<i class="fa-solid fa-chevron-up"></i> }
+        </div>
       </li>
-      <li>
-        <a routerLink="cases" routerLinkActive="activated" class="nav-link">
-          <i class="fa-solid fa-suitcase"></i>
-          Cases</a
-        >
+      @if (clientsDropDown) {
+      <app-dropdown passedRoute="clients" listName="Clients Lists" />
+      <app-dropdown passedRoute="#" listName="Client Category" />
+      <app-dropdown passedRoute="#" listName="Add Client" />
+      }
+      <li
+        (click)="casesToggle()"
+        [ngClass]="{ activated: casesDropDown }"
+        class="d-flex justify-content-between nav-list"
+      >
+        <div>
+          <a class="nav-link">
+            <i class="fa-solid fa-suitcase"></i>
+            Cases</a
+          >
+        </div>
+        <div class="arrowDown p-2">
+          @if (casesDropDown) {
+          <i class="fa-solid fa-chevron-down"></i>
+          } @else {<i class="fa-solid fa-chevron-up"></i> }
+        </div>
       </li>
+      @if (casesDropDown) {
+      <app-dropdown passedRoute="cases" listName="Cases List" />
+      <app-dropdown passedRoute="#" listName="Add New Case" />
+      }
       <li>
         <a class="nav-link" routerLink="court" routerLinkActive="activated">
           <i class="fa-solid fa-building-columns"></i>
           Court</a
         >
       </li>
-      <li>
+      <li (click)="closeAllDropdowns()">
         <a class="nav-link" routerLink="calender" routerLinkActive="activated">
           <i class="fa-solid fa-calendar-days"></i>
           Events Calender</a
