case categories table & it's route

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -21,6 +21,13 @@
     thirdColumnHeader="Details"
     fourthColumnHeader="Actions"
   >
+    <th
+      scope="col"
+      style="color: var(--mainTextColor)"
+      ngProjectAs="fourthColumnHeader"
+    >
+      Action
+    </th>
     @for (case of cases; track $index) {
     <tr>
       <td class="text-center">{{ $index + 1 }}</td>
