--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -65,6 +65,7 @@
       </li>
       @if (casesDropDown) {
       <app-dropdown passedRoute="cases" listName="Cases List" />
+      <app-dropdown passedRoute="caseCategories" listName="Case Categories" />
       <app-dropdown passedRoute="#" listName="Add New Case" />
       }
       <li>
