category delete functionality

--- a/frontend/src/app/components/cases/case-category/case-category.component.html
+++ b/frontend/src/app/components/cases/case-category/case-category.component.html
@@ -13,7 +13,11 @@
       <td>{{ category.description }}</td>
       <td>
         <div class="custom-select">
-          <select name="SELECT" id="">
+          <select
+            name="SELECT"
+            id=""
+            (change)="onActionSelect($event, category.id)"
+          >
             <option value="">SELECT</option>
             <option value="Update">Update</option>
             <option value="Delete">Delete</option>
