Case Categories From && dynamic showing updates && form animation && Country Service

--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -52,7 +52,7 @@
       <td>
         <div class="custom-select">
           <select
-            (change)="onActionSelect($event, case.id)"
+            (change)="onActionSelect($event, case.id!)"
             name="SELECT"
             id=""
           >
