--- a/frontend/src/app/components/cases/case-category/case-category.component.html
+++ b/frontend/src/app/components/cases/case-category/case-category.component.html
@@ -1,5 +1,18 @@
 <div class="">
-  <app-secondary-nav tableTitle="Case Categories" addNewButton="New Category" />
+  <app-secondary-nav
+    tableTitle="Case Categories"
+    addNewButton="New Category"
+    (btnClicked)="toggleFormVisibility()"
+  />
+
+  <app-adding-form
+    *ngIf="isFormVisible"
+    [formType]="formType"
+    [formHeader]="formHeader"
+    [formInputRows]="newCategoryInputRows"
+    [onFormSubmit]="submitForm"
+    (backdropClicked)="toggleFormVisibility()"
+  ></app-adding-form>
 
   <app-table
     firstColumnHeader="Category Name"
@@ -9,14 +22,14 @@
     @for (category of categories; track $index) {
     <tr>
       <td class="text-center">{{ $index + 1 }}</td>
-      <td>Category Name: {{ category.name }}</td>
+      <td>{{ category.name }}</td>
       <td>{{ category.description }}</td>
       <td>
         <div class="custom-select">
           <select
             name="SELECT"
             id=""
-            (change)="onActionSelect($event, category.id)"
+            (change)="onActionSelect($event, category.id!)"
           >
             <option value="">SELECT</option>
             <option value="Update">Update</option>
