user profile page + client category table & add client category functionality + loading page + adjusting routes

--- a/frontend/src/app/components/clients/client-category/client-category.component.html
+++ b/frontend/src/app/components/clients/client-category/client-category.component.html
@@ -1,7 +1,7 @@
 <div class="">
   <app-secondary-nav
-    tableTitle="Case Categories"
-    addNewButton="New Case Category"
+    tableTitle="Client Categories"
+    addNewButton="New Client Category"
     (btnClicked)="toggleFormVisibility()"
   />
 
@@ -22,7 +22,7 @@
     @for (category of categories; track $index) {
     <tr>
       <td class="text-center">{{ $index + 1 }}</td>
-      <td>{{ category.name }}</td>
+      <td>{{ category.category_name }}</td>
       <td>{{ category.description }}</td>
       <td>
         <div class="custom-select">
