--- a/frontend/src/app/components/clients/client/client.component.html
+++ b/frontend/src/app/components/clients/client/client.component.html
@@ -1,5 +1,6 @@
 <div>
-  <span>Name: {{ clientName }} </span> <br />
+  <span class="name" [routerLink]="userProfile">Name: {{ clientName }} </span>
+  <br />
   <span>Mobile: {{ clientMobile }} </span> <br />
   <span
     >Email:
