--- a/frontend/src/app/components/clients/clients.component.html
+++ b/frontend/src/app/components/clients/clients.component.html
@@ -25,7 +25,7 @@
       <td style="color: var(--mainTextColor)" class="text-center">
         {{ $index + 1 }}
       </td>
-      <td>{{ client.name }}</td>
+      <td class="name" [routerLink]="['/clients', client.id]">{{ client.name }}</td>
       <td>
         Mobile: {{ client.mobile }} <br />
         Email: {{ client.email }}
