--- a/frontend/src/app/shared/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/sidebar/sidebar.component.html
@@ -43,8 +43,7 @@
       </li>
       @if (clientsDropDown) {
       <app-dropdown passedRoute="clients" listName="Clients Lists" />
-      <app-dropdown passedRoute="#" listName="Client Category" />
-      <app-dropdown passedRoute="#" listName="Add Client" />
+      <app-dropdown passedRoute="clientCategories" listName="Client Category" />
       }
       <li
         (click)="casesToggle()"
@@ -66,7 +65,6 @@
       @if (casesDropDown) {
       <app-dropdown passedRoute="cases" listName="Cases List" />
       <app-dropdown passedRoute="caseCategories" listName="Case Categories" />
-      <app-dropdown passedRoute="#" listName="Add New Case" />
       }
       <li>
         <a class="nav-link" routerLink="court" routerLinkActive="activated">
