--- a/frontend/src/app/components/cases/cases.component.html
+++ b/frontend/src/app/components/cases/cases.component.html
@@ -1,3 +1,8 @@
+@if (loading) {
+<div class="d-flex justify-content-center">
+  <app-loading-screen />
+</div>
+} @else {
 <div class="">
   <app-secondary-nav
     tableTitle="All Cases"
@@ -14,7 +19,6 @@
     [onFormSubmit]="submitForm"
     (backdropClicked)="toggleFormVisibility()"
   ></app-adding-form>
-
   <app-table
     firstColumnHeader="Case"
     secondColumnHeader="Client"
@@ -43,6 +47,7 @@
       ></td>
       <td
         client-td
+        [userProfile]="['/clients', case.client?.id]"
         [clientName]="case.client?.name"
         [clientMobile]="case.client?.mobile"
         [clientEmail]="case.client?.email"
@@ -67,8 +72,8 @@
           ></i>
         </div>
       </td>
-      <td *ngIf="loading">Deleting...</td>
     </tr>
     }
   </app-table>
 </div>
+}
