--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -13,3 +13,8 @@ body {
 .table td:not(:first-child) {
   min-width: 200px;
 }
+
+td:first-child {
+  font-weight: bold;
+  color: var(--mainTextColor);
+}
