single page reusable component + case details component

--- a/frontend/src/app/components/cases/case/case.component.css
+++ b/frontend/src/app/components/cases/case/case.component.css
@@ -2,3 +2,8 @@ span {
   color: var(--textTablecolor);
   font-weight: bold;
 }
+
+.router:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
