--- a/frontend/src/app/components/cases/case/case.component.html
+++ b/frontend/src/app/components/cases/case/case.component.html
@@ -1,5 +1,5 @@
 <div>
-  <span>Case Name: {{ caseName }} </span> <br />
+  <span [routerLink]="caseDetail" class="router">Case Name: {{ caseName }} </span> <br />
   <span>Case Number: {{ caseId }} </span> <br />
   <span
     >Case Type:
