dynamically updating table data internally upon Adding || Updating

--- a/frontend/src/app/shared/adding-form/adding-form.component.html
+++ b/frontend/src/app/shared/adding-form/adding-form.component.html
@@ -5,7 +5,7 @@
     @for (item of formInputRows; track $index) {
     <app-input-row
       [input_Info]="item"
-      (inputChanged)="saveInputData($index, $event)"
+      (inputChanged)="saveInputData(item.backed_key, $event)"
     />
     }
     <button type="button" (click)="submitForm()">{{ formType }}</button>
