--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.html
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.html
@@ -16,7 +16,7 @@
 <div class="input-group">
   <label for="input-row">{{ input_Info.title | uppercase }}</label>
   <input
-    [id]="input_Info.id"
+    [id]="input_Info.backed_key"
     [placeholder]="input_Info.title"
     [type]="input_Info.type"
     [value]="input_Info.value ? input_Info.value : ''"
