--- a/frontend/src/app/shared/adding-form/adding-form.component.css
+++ b/frontend/src/app/shared/adding-form/adding-form.component.css
@@ -24,7 +24,7 @@
   border-radius: 8px;
   z-index: 1010;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  animation: fadeIn 0.5s ease-in-out forwards; /* Add fadeIn animation */
+  animation: fadeIn 0.5s ease-in-out forwards;
 }
 
 .form-box h2 {
@@ -74,16 +74,5 @@ button:hover {
   100% {
     opacity: 1;
     transform: translateY(0px);
-  }
-}
-
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-    transform: scale(1);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0.95);
   }
 }
