--- a/frontend/src/app/shared/adding-form/input-row/input-row.component.html
+++ b/frontend/src/app/shared/adding-form/input-row/input-row.component.html
@@ -1,5 +1,9 @@
 @if (input_Info.type == 'select') {
-<div class="input-group">
+<div
+  class="input-group"
+  [hidden]="input_Info.disabled"
+  [id]="input_Info.backed_key"
+>
   <label for="selectInput">{{ input_Info.title | uppercase }}</label>
   <select id="selectInput" (change)="emmitNewValue($event)">
     <option [value]="null" hidden>
@@ -13,7 +17,11 @@
   </select>
 </div>
 } @else {
-<div class="input-group">
+<div
+  class="input-group"
+  [hidden]="input_Info.disabled"
+  [id]="input_Info.backed_key"
+>
   <label for="input-row">{{ input_Info.title | uppercase }}</label>
   <input
     [id]="input_Info.backed_key"
