--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,12 @@
-<div class="main-wrapper">
-  <app-sidebar></app-sidebar>
-  <div class="main-content">
-    <router-outlet></router-outlet>
+<div *ngIf="isLoggedIn$ | async; else loginForm">
+  <div class="main-wrapper">
+    <app-sidebar></app-sidebar>
+    <div class="main-content">
+      <router-outlet></router-outlet>
+    </div>
   </div>
 </div>
+
+<ng-template #loginForm>
+  <app-login-from></app-login-from>
+</ng-template>
